# mvim

./: .clang-format  .clang-tidy  .gitignore  .mvimrc  CMakeLists.txt  README.md  generate_large_file.py
src/: cmd_registry.hpp  config.hpp  editor.cpp  editor.hpp  editor_commands.cpp  file_reader.cpp  file_reader.hpp  gap_buffer.cpp  gap_buffer.hpp  gap_text_buffer_core.cpp  gap_text_buffer_core.hpp  headless_terminal.cpp  headless_terminal.hpp  i_text_buffer_core.hpp  input.cpp  input.hpp  iterminal.hpp  line_index.cpp  line_index.hpp  main.cpp  ncurses_terminal.cpp  ncurses_terminal.hpp  pane_layout.cpp  pane_layout.hpp  posix_fd.hpp  renderer.cpp  renderer.hpp  rope_text_buffer_core.cpp  rope_text_buffer_core.hpp  terminal.cpp  terminal.hpp  text_buffer.cpp  text_buffer.hpp  text_buffer_core.cpp  text_buffer_core.hpp  types.hpp  undo_manager.cpp  undo_manager.hpp  vector_text_buffer_core.hpp
tests/: bench_backends.cpp  bench_large_delete.cpp  test_layout.cpp  test_text_buffer.cpp
